# rdbg

./: .gitattributes  .gitmodules  Cargo.toml  README.md  build.rs  repro.cc
gui/: build.gradle.kts  settings.gradle.kts
gui/src/main/kotlin/: Repo.kt
gui/src/main/kotlin/view/: CodeView.kt  SettingsView.kt
protos/: code_view.proto  recorder.proto  replayer.proto  theme.proto
server/: .gitattributes  .gitignore  .gitmodules  Cargo.toml  build.rs
server/akamud.vscode-theme-onedark-2.2.3.vsix.unp/: [Content_Types].xml  extension.vsixmanifest
server/akamud.vscode-theme-onedark-2.2.3.vsix.unp/extension/: package.json
server/akamud.vscode-theme-onedark-2.2.3.vsix.unp/extension/themes/: OneDark.json
server/samples/simple/: Cargo.toml
server/samples/simple/src/: main.rs
server/src/: code_view.rs  lib.rs  main.rs  replay.rs  session.rs  test_common.rs  trace.rs
server/src/api/: mod.rs  recorder.rs  theme.rs
server/src/gdb_client/: common.rs  mod.rs  parser.rs  serializer.rs
server/src/gdb_client/snapshots/: server__gdb_client__tests__query_thread_ids.snap  server__gdb_client__tests__read_general_registers.snap
server/src/theme/: import.rs  marketplace.rs  mod.rs
server/tests/: test_replay.rs
server/tests/common/: mod.rs
server/tests/samples/: strace.txt
server/tests/samples/traces/hello_world/: tasks
server/tests/samples/traces/simple/: events  tasks  version
server/tests/snapshots/: test_replay__query_halt_reason.snap
src/: cmd.rs  lib.rs  main.rs  replay.rs  session.rs  test_common.rs  trace.rs
src/gdb_client/: common.rs  mod.rs  parser.rs  serializer.rs
src/gdb_client/snapshots/: server__gdb_client__tests__read_registers.snap
src/rr/: bridge.rs  mod.rs  replay_session.rs  rr.h
tests/: test_replay.rs  test_rr.rs  test_session.rs
tests/common/: mod.rs
tests/sample_sources/hello_world_bin/: Cargo.toml
tests/sample_traces/hello_world_bin/: data  events  mmap_hardlink_3_hello_world_bin  mmaps  tasks  version
tests/samples/: break_main.strace
tests/samples/projects/simple/: LICENSE.md
tests/samples/traces/hello_world/: data  events  mmap_hardlink_4_hello_world  mmaps  tasks  version
tests/samples/traces/simple/: data  mmap_hardlink_4_blog  mmaps
tests/snapshots/: test_replay__query_halt_reason.snap
vsc/: CHANGELOG.md  README.md  package.json
vsc/src/: extension.ts
wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
