[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
camino = "1.0.4"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing-subscriber = "0.2.17"
tracing = "0.1.25"
rand = "0.8.3"

[dev-dependencies]
pretty_assertions = "0.7.2"
