[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
camino = "1.0.4"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing-subscriber = "0.2.17"
tracing = "0.1.25"
rand = "0.8.3"
nom = "6.1.2"
thiserror = "1.0.24"
displaydoc = "0.2.1"
lazy_static = "1.4.0"
regex = "1.4.6"
gimli = "0.24.0"
object = "0.24.0"
memmap = "0.7.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
duct = "0.13.5"
insta = "1.7.1"
