[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
camino = "1.0.4"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing-subscriber = "0.2.17"
tracing = "0.1.25"
thiserror = "1.0.24"
displaydoc = "0.2.1"
lazy_static = "1.4.0"
regex = "1.4.6"
rand = "0.8.3"
rustc-demangle = "0.1.18"
gdbmi = { path = "../../gdbmi", features = ["serde1"] }
tokio = { version = "1.5.0", features = [
    "macros",
    "process",
    "sync",
    "io-util",
    "rt",
    "net"
] }
async-stream = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "3.3.2"

[dev-dependencies]
pretty_assertions = "0.7.2"
duct = "0.13.5"
insta = "1.7.1"
serial_test = "0.5.1"
